--- a/src/main/webapp/arrangement/List.xhtml
+++ b/src/main/webapp/arrangement/List.xhtml
@@ -59,7 +59,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListArrangementTitle_arrangementtype}"/>
                             </f:facet>
-                            <h:outputText value="#{item.arrangementtype}"/>
+                            <h:outputText value="#{item.arrangementtype.arrangementtype}"/>
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{arrangementController.prepareCreate}" update=":ArrangementCreateForm" oncomplete="PF('ArrangementCreateDialog').show()"/>
