--- a/src/main/webapp/arrangementtype/Edit.xhtml
+++ b/src/main/webapp/arrangementtype/Edit.xhtml
@@ -21,7 +21,7 @@
                         <p:selectOneMenu id="arrangement" value="#{arrangementtypeController.selected.arrangement}" >
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{arrangementController.itemsAvailableSelectOne}"
-                                           var="arrangementItem"
+                                           var="arrangementItem" itemLabel="#{arrangementItem.arrangementid}"
                                            itemValue="#{arrangementItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
