--- a/src/main/webapp/monitoring/List.xhtml
+++ b/src/main/webapp/monitoring/List.xhtml
@@ -53,7 +53,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListMonitoringTitle_monitor}"/>
                             </f:facet>
-                            <h:outputText value="#{item.monitor}"/>
+                            <h:outputText value="#{item.monitor.monitorname}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
